@@ -753,6 +753,7 @@ following image formats are supported:
 @item .Y.U.V       @tab X @tab X @tab one raw file per component
 @item animated GIF @tab X @tab X @tab Only uncompressed GIFs are generated.
 @item PNG          @tab X @tab X @tab 2 bit and 4 bit/pixel not supported yet.
+@item Targa        @tab   @tab X @tab Targa (.TGA) image format.
 @item SGI          @tab X @tab X @tab SGI RGB image format
 @end multitable
 
