@@ -37,8 +37,8 @@ extern "C" {
 #define AV_STRINGIFY(s)         AV_TOSTRING(s)
 #define AV_TOSTRING(s) #s
 
-#define LIBAVCODEC_VERSION_INT  ((51<<16)+(16<<8)+0)
-#define LIBAVCODEC_VERSION      51.16.0
+#define LIBAVCODEC_VERSION_INT  ((51<<16)+(17<<8)+0)
+#define LIBAVCODEC_VERSION      51.17.0
 #define LIBAVCODEC_BUILD        LIBAVCODEC_VERSION_INT
 
 #define LIBAVCODEC_IDENT        "Lavc" AV_STRINGIFY(LIBAVCODEC_VERSION)
@@ -144,6 +144,7 @@ enum CodecID {
     CODEC_ID_VP5,
     CODEC_ID_VP6,
     CODEC_ID_VP6F,
+    CODEC_ID_TARGA,
 
     /* various pcm "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
@@ -2292,6 +2293,7 @@ extern AVCodec flashsv_decoder;
 extern AVCodec cavs_decoder;
 extern AVCodec vmnc_decoder;
 extern AVCodec wavpack_decoder;
+extern AVCodec targa_decoder;
 
 /* pcm codecs */
 #define PCM_CODEC(id, name) \
